<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_large">

            <TextView
                android:id="@+id/setting1"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting1" />

            <View style="@style/bg_line" />

            <TextView
                android:id="@+id/setting2"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting2" />

            <View style="@style/bg_line" />

            <TextView
                android:id="@+id/setting3"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/setting4"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting1" />

            <View style="@style/bg_line" />

            <TextView
                android:id="@+id/setting5"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting2" />

            <View style="@style/bg_line" />

            <TextView
                android:id="@+id/setting6"
                style="@style/SettingItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting3" />
        </LinearLayout>
    </LinearLayout>
</layout>